<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="129dp"
    tools:context=".MainActivity"
    android:background="@color/camera_block_content_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_capture_image"
        style="@style/ImageSelectorText"
        android:text="@string/camera_capture_image"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/camera_divider"
        android:background="@color/camera_line_dark_color"/>

    <TextView
        android:id="@+id/tv_select_from_gallery"
        style="@style/ImageSelectorText"
        android:text="@string/camera_choose_image_from_gallery"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/camera_divider"
        android:background="@color/camera_line_dark_color"/>

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/ImageSelectorText"
        android:text="@string/camera_cancel"/>

</LinearLayout>