<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/camera_main_bg">

    <com.ytx.appframework.widget.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/camera_bg_title_bar"
            app:ytx_left_show="none"
            app:ytx_title="@string/camera_picture_preview" tools:ignore="MissingConstraints"/>

    <!--<com.github.chrisbanes.photoview.PhotoView-->
    <!--android:id="@+id/iv_preview"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="0dp"-->
    <!--android:background="#161926"-->
    <!--android:scaleType="fitCenter"-->
    <!--app:layout_constraintBottom_toTopOf="@+id/cl_delete"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@id/title_bar"-->
    <!--tools:src="@mipmap/ic_camera_i_know"/>-->

    <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#161926"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/cl_delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_delete"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@color/camera_block_content_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <TextView
                android:id="@+id/tv_delete"
                style="@style/Button.ReRecord"
                android:layout_margin="0dp"
                android:text="@string/camera_picture_delete"
                android:textSize="@dimen/camera_mediums_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_confirm"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/tv_confirm"
                style="@style/Button.Complete"
                android:layout_margin="0dp"
                android:text="@string/camera_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_delete"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>